--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <div class="div-img"></div>
         <h2> Cumbia By 4fr3</h2>
-        <img src="/src/alien-bailando.gif" alt="alien bailando">
+        <img src="src/alien-bailando.gif" alt="alien bailando">
         <br>
         <audio controls src="src/Cumbia_4fr3.mp3" ></audio>
     </main>
