--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/src/img/4FR3-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="src/img/4FR3-icon.png" type="image/x-icon">
     <title> 4fr3 Música</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <a href="#">Letra <hr></a>
         </div>
         <div class="div-img">
-            <img src="/src/img/4FR3-icon.png" alt="icono del sitio">
+            <img src="src/img/4FR3-icon.png" alt="icono del sitio">
             <hr class="hr-logo">    
         </div>
         <div class="div-a">
